--- a/bfs.cabal
+++ b/bfs.cabal
@@ -10,7 +10,7 @@ name:                bfs
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:             0.1.0.10
+version:             1.1.0.11
 
 -- A short (one-line) description of the package.
 synopsis:            A simple BFS implementation in Haskell that searches a text maze for the shortest path.
@@ -57,7 +57,7 @@ executable bfs
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.8 && <4.9, containers >=0.5 && <0.6, lens >=4.13 && <4.14
+  build-depends:       base >=4.8 && <4.9, containers >=0.5 && <0.6, bytestring, lens
   
   -- Directories containing source files.
   -- hs-source-dirs:      
